# chrome-blinklight

./: README.md  README.txt
debian/: changelog  control  copyright  install  links  postinst  rules
debian/chromium/: blinklight
extension/: background.js  blinklight.js  content.js  content_common.js  content_generic.js  content_gmail.js  content_google_plus.js  content_hangout.js  content_irccloud.js  led.js  manifest.json  options.css  options.html  options.js  tabs.js  visible_windows.js
native-messaging-host/: Makefile.am  configure.ac  native-messaging-host.c  org.snoack.blinklight.json.in
plugin/: SConstruct  compat.h  led_control.cc  led_control.h  led_control.idl  plugin.cc  thinkpad_led_control.cc  thinkpad_led_control.h  thinkpad_led_control.idl
